--- a/src/templates/dsDatepicker.tpl.html
+++ b/src/templates/dsDatepicker.tpl.html
@@ -1,31 +1,35 @@
 <div class="dsDatepicker">
     <div class="l-input">
-        <input class="dateInputField" type="text" ds-date-format format="{{config.dateFormat}}" ng-model="date" ng-click="active = !active">
+        <input class="datepicker-inputField boxBorder" type="text" ds-date-format
+               format="{{config.dateFormat}}" ng-model="date" ng-change="setDate(date)"/>
+        <span class="datepicker-opener-group boxBorder"><button
+                class="datepicker-opener-btn datepicker-icon"
+                ng-click="flipPickerState($event)"></button></span>
     </div>
-    <div class="l-datepicker" ng-class="{hidden: !active}">
+    <div ng-if="pickerState" class="l-datepicker boxBorder" ng-click="$event.stopPropagation()">
         <div class="interactionArea">
-            <span ng-click="subMonth()" class="btn"><<</span>
-            <span ng-click="sub()" class="btn"><</span>
-            <span id="curDate" class="btn">{{date | date:config.dateFormat }}</span>
-            <span id="nextDayBtn" ng-click="add()" class="btn">></span>
-            <span ng-click="addMonth()" class="btn">>></span>
-            <span style="float: right;" class="btn" ng-click="active = !active">X</span>
+            <div ng-click="subMonth()" class="month-decrease arrow arrow-left"></div>
+            <span id="curDate"
+                  class="btn">{{date | date:config.dateFormat }}</span>
+            <div ng-click="addMonth()" class="month-increase arrow arrow-right"></div>
         </div>
-        <table>
-            <thead>
-            <tr class="dayHeader week">
-                <th class="day" ng-repeat="week in [0, 1, 2, 3, 4, 5, 6]">
-                    {{dates[week] | date:'EEE'}}
-                </td>
-            </tr>
-            </thead>
-            <tbody>
-                <tr class="week" ng-repeat="week in [0, 1, 2, 3, 4, 5]">
-                    <td class="day btn" ng-repeat="day in [1, 2, 3, 4, 5, 6, 7]" ng-click="setDate(dates[(week * 7) + day - 1])" ng-class="{otherMonth: dates[(week * 7) + day - 1].getMonth() !== date.getMonth(), today: (dates[(week * 7) + day - 1].getDate() === date.getDate()) && (dates[(week * 7) + day - 1].getMonth() === date.getMonth())}">
+        <div class="datepicker-table">
+            <div class="datepicker-table-header">
+                <div class="datepicker-table-row">
+                    <div class="datepicker-table-head" ng-repeat="day in [0, 1, 2, 3, 4, 5, 6]">
+                        {{dates[day] | date:'EEE'}}
+                    </div>
+                </div>
+            </div>
+            <div class="datepicker-table-body">
+                <div class="datepicker-table-row" ng-repeat="week in [0, 1, 2, 3, 4, 5]">
+                    <div class="datepicker-day" ng-repeat="day in [1, 2, 3, 4, 5, 6, 7]"
+                        ng-click="setDate(dates[(week * 7) + day - 1])"
+                        ng-class="{otherMonth: dates[(week * 7) + day - 1].getMonth() !== date.getMonth(), selected: (dates[(week * 7) + day - 1].getDate() === date.getDate()) && (dates[(week * 7) + day - 1].getMonth() === date.getMonth())}">
                         {{dates[(week * 7) + day - 1] | date:'dd'}}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
