--- a/src/templates/dsDatepicker.tpl.html
+++ b/src/templates/dsDatepicker.tpl.html
@@ -1,16 +1,19 @@
 <div class="dsDatepicker">
     <div class="l-input">
         <input class="datepicker-inputField boxBorder" type="text" ds-date-format
-               format="{{config.dateFormat}}" ng-model="date" ng-change="setDate(date)"/>
+               format="{{config.dateFormat}}" ng-model="date" ng-change="setDate(date)"
+               ng-disabled="disabled"/>
         <span class="datepicker-opener-group boxBorder"><button
                 class="datepicker-opener-btn datepicker-icon"
-                ng-click="flipPickerState($event)"></button></span>
+                ng-click="flipPickerState($event)" ng-disabled="disabled"></button></span>
     </div>
     <div ng-if="pickerState" class="l-datepicker boxBorder" ng-click="$event.stopPropagation()">
         <div class="interactionArea">
-            <div ng-click="subMonth()" class="month-decrease arrow arrow-left"></div>
-            <span id="curDate">{{date | date:config.dateFormat}}</span>
-            <div ng-click="addMonth()" class="month-increase arrow arrow-right"></div>
+            <div class="month-decrease"><div ng-click="subMonth()" class="arrow arrow-left"></div></div><!--
+            --><div class="pickerDate">
+                <span id="curDate">{{date | date:(config.pickerFormat || config.dateFormat)}}</span>
+            </div><!--
+            --><div class="month-increase"><div ng-click="addMonth()" class="arrow arrow-right"></div></div>
         </div>
         <div class="datepicker-table">
             <div class="datepicker-table-header">
@@ -23,8 +26,8 @@
             <div class="datepicker-table-body">
                 <div class="datepicker-table-row" ng-repeat="week in [0, 1, 2, 3, 4, 5]">
                     <div class="datepicker-day" ng-repeat="day in [1, 2, 3, 4, 5, 6, 7]"
-                        ng-click="setDate(dates[(week * 7) + day - 1])"
-                        ng-class="{otherMonth: dates[(week * 7) + day - 1].getMonth() !== date.getMonth(), selected: (dates[(week * 7) + day - 1].getDate() === date.getDate()) && (dates[(week * 7) + day - 1].getMonth() === date.getMonth())}">
+                         ng-click="setDate(dates[(week * 7) + day - 1])"
+                         ng-class="{otherMonth: dates[(week * 7) + day - 1].getMonth() !== date.getMonth(), selected: (dates[(week * 7) + day - 1].getDate() === date.getDate()) && (dates[(week * 7) + day - 1].getMonth() === date.getMonth())}">
                         {{dates[(week * 7) + day - 1] | date:'dd'}}
                     </div>
                 </div>
