--- a/src/templates/dsDatepicker.tpl.html
+++ b/src/templates/dsDatepicker.tpl.html
@@ -3,8 +3,8 @@
         <input class="datepicker-inputField boxBorder" type="text" ds-date-format
                format="{{config.dateFormat}}" ng-model="date" ng-change="setDate(date)"
                ng-disabled="disabled"/><!--
-        --><div class="datepicker-opener-group boxBorder"><button
-                class="datepicker-opener-btn datepicker-icon"
+        --><div class="datepicker-opener-group"><button
+                class="datepicker-opener-btn datepicker-icon boxBorder"
                 ng-click="flipPickerState($event)" ng-disabled="disabled"></button></div>
     </div>
     <div ng-if="pickerState" class="l-datepicker boxBorder" ng-click="$event.stopPropagation()">
